Adding Material Card cmp to MenuItem

--- a/src/app/home/components/menu-item/menu-item.component.html
+++ b/src/app/home/components/menu-item/menu-item.component.html
@@ -1,3 +1,5 @@
-<div class="menu-item" [routerLink]="['/', menuItem.route]">
-  <div class="menu-item__label">{{ menuItem.label }}</div>
-</div>
+<mat-card [routerLink]="['/', menuItem.route]">
+  <mat-card-header>
+    <mat-card-title>{{ menuItem.label }}</mat-card-title>
+  </mat-card-header>
+</mat-card>
