Tweaking colors, button added to the menu item tile

--- a/src/app/home/components/menu-item/menu-item.component.html
+++ b/src/app/home/components/menu-item/menu-item.component.html
@@ -1,5 +1,5 @@
-<mat-card [routerLink]="['/', menuItem.route]">
-  <mat-card-header>
-    <mat-card-title>{{ menuItem.label }}</mat-card-title>
-  </mat-card-header>
+<mat-card >
+  <mat-card-content>
+    <button mat-raised-button color="primary" [routerLink]="['/', menuItem.route]">Planner</button>
+  </mat-card-content>
 </mat-card>
