Generating a Calendar Grid for the current month

--- a/src/app/planner/components/calendar/calendar.component.html
+++ b/src/app/planner/components/calendar/calendar.component.html
@@ -1,1 +1,5 @@
-<p>calendar works!</p>
+<mat-card *ngFor="let day of days" [class]="day.positionClass">
+  <mat-card-content>
+    {{ day.date }}
+  </mat-card-content>
+</mat-card>
