--- a/src/app/planner/components/calendar/calendar.component.scss
+++ b/src/app/planner/components/calendar/calendar.component.scss
@@ -1,10 +1,25 @@
-:host {
+.calendar {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
 
+  &__header {
+    display: flex;
+    gap: 8px;
+    margin: 5px;
+  }
+
+  &__header-item {
+    flex: 1;
+  }
+
+  &__divider, &__header {
+    grid-column: 1 / 8;
+  }
+
   @for $i from 1 through 7 {
-    .day-#{$i} {
+    .calendar__day-#{$i} {
       grid-column: $i;
+      margin: 5px;
     }
   }
 }
