--- a/src/app/planner/components/calendar/calendar.component.html
+++ b/src/app/planner/components/calendar/calendar.component.html
@@ -5,9 +5,9 @@
     </mat-card>
   </div>
   <mat-divider class="calendar__divider" />
-  <mat-card *ngFor="let day of days" [class]="day.positionClass">
+  <mat-card *ngFor="let day of days" class="calendar__day" [class]="day.positionClass">
     <mat-card-content>
-      {{ day.date }}
+      <button class="calendar__day-btn" mat-mini-fab color="primary">{{ day.dayOfMonth }}</button>
     </mat-card-content>
   </mat-card>
 </div>
