Added form controls for year and month fields

--- a/src/app/planner/components/calendar/calendar.component.html
+++ b/src/app/planner/components/calendar/calendar.component.html
@@ -5,14 +5,14 @@
       <div class="calendar__actions">
         <mat-form-field>
           <mat-label>Year</mat-label>
-          <mat-select>
+          <mat-select [formControl]="yearFormControl">
             <mat-option *ngFor="let year of years" [value]="year">{{ year }}</mat-option>
           </mat-select>
         </mat-form-field>
-        <mat-form-field>
+        <mat-form-field >
           <mat-label>Month</mat-label>
-          <mat-select>
-            <mat-option *ngFor="let month of months" [value]="month">{{ month }}</mat-option>
+          <mat-select [formControl]="monthFormControl">
+            <mat-option *ngFor="let month of months" [value]="month.value">{{ month.label }}</mat-option>
           </mat-select>
         </mat-form-field>
         <button mat-mini-fab>
