Logic moved to the CalendarService from Calendar and CalendarToolbar components

--- a/src/app/planner/components/calendar/calendar-toolbar/calendar-toolbar.component.html
+++ b/src/app/planner/components/calendar/calendar-toolbar/calendar-toolbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="calendar__toolbar" color="primary">
   <mat-toolbar-row>
-    <span class="calendar__label">{{ label }}</span>
+    <span class="calendar__label">{{ label() }}</span>
     <div class="calendar__actions">
       <mat-form-field>
         <mat-label>Year</mat-label>
