--- a/src/app/planner/components/calendar/calendar-toolbar/calendar-toolbar.component.html
+++ b/src/app/planner/components/calendar/calendar-toolbar/calendar-toolbar.component.html
@@ -4,20 +4,20 @@
     <div class="calendar__actions">
       <mat-form-field>
         <mat-label>Year</mat-label>
-        <mat-select [formControl]="yearFormControl">
+        <mat-select [value]="calendarService.year()" (selectionChange)="calendarService.setYear($event.value)">
           <mat-option *ngFor="let year of years" [value]="year">{{ year }}</mat-option>
         </mat-select>
       </mat-form-field>
-      <mat-form-field >
+      <mat-form-field>
         <mat-label>Month</mat-label>
-        <mat-select [formControl]="monthFormControl">
+        <mat-select [value]="calendarService.month()" (selectionChange)="calendarService.setMonth($event.value)">
           <mat-option *ngFor="let month of months" [value]="month.value">{{ month.label }}</mat-option>
         </mat-select>
       </mat-form-field>
-      <button mat-mini-fab>
+      <button mat-mini-fab [disabled]="calendarService.isPrevButtonDisabled()"  (click)="calendarService.goToPreviousMonth()">
         <mat-icon>arrow_left</mat-icon>
       </button>
-      <button mat-mini-fab>
+      <button mat-mini-fab [disabled]="calendarService.isNextButtonDisabled()" (click)="calendarService.goToNextMonth()">
         <mat-icon>arrow_right</mat-icon>
       </button>
     </div>
