--- a/src/app/planner/components/calendar/calendar-toolbar/calendar-toolbar.component.html
+++ b/src/app/planner/components/calendar/calendar-toolbar/calendar-toolbar.component.html
@@ -1,7 +1,7 @@
-<mat-toolbar class="calendar__toolbar" color="primary">
+<mat-toolbar class="calendar-toolbar" color="primary">
   <mat-toolbar-row>
-    <span class="calendar__label">{{ label() }}</span>
-    <div class="calendar__actions">
+    <span class="calendar-toolbar__label">{{ label() }}</span>
+    <div class="calendar-toolbar__actions">
       <button mat-raised-button color="accent" (click)="calendarService.setToday()">Today</button>
       <mat-form-field>
         <mat-label>Year</mat-label>
