--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $BeautifulMindApp-primary: mat.define-palette(mat.$indigo-palette);
-$BeautifulMindApp-accent: mat.define-palette(mat.$blue-grey-palette, A200, A100, A400);
+$BeautifulMindApp-accent: mat.define-palette(mat.$amber-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $BeautifulMindApp-warn: mat.define-palette(mat.$red-palette);
