Calendar component simplified, DayTile created

--- a/src/app/planner/components/calendar/calendar.component.html
+++ b/src/app/planner/components/calendar/calendar.component.html
@@ -1,14 +1,12 @@
 <div class="calendar">
-  <app-calendar-toolbar />
+  <app-calendar-toolbar/>
   <div class="calendar__header">
     <mat-card *ngFor="let dayOfWeek of daysOfWeek" class="calendar__header-item">
       <mat-card-content>{{ dayOfWeek }}</mat-card-content>
     </mat-card>
   </div>
   <mat-divider class="calendar__divider"/>
-  <mat-card *ngFor="let day of grid()" class="calendar__day" [class]="day.positionClass">
-    <mat-card-content>
-      <button class="calendar__day-btn" mat-mini-fab color="primary">{{ day.dayOfMonth }}</button>
-    </mat-card-content>
-  </mat-card>
+  <ng-container *ngFor="let day of grid()">
+    <app-day-tile [day]="day"/>
+  </ng-container>
 </div>
