Setup for building Event form

--- a/src/app/planner/components/calendar/event-form/event-form.component.html
+++ b/src/app/planner/components/calendar/event-form/event-form.component.html
@@ -1,30 +1,38 @@
-<form class="event-form">
+<form class="event-form" [formGroup]="form">
   <div class="event-form__field">
     <mat-icon>title</mat-icon>
     <mat-form-field>
       <mat-label>Title</mat-label>
-      <input matInput>
+      <input formControlName="title" matInput>
     </mat-form-field>
   </div>
   <div class="event-form__field">
     <mat-icon>description</mat-icon>
     <mat-form-field>
       <mat-label>Description</mat-label>
-      <textarea matInput placeholder="Ex. meeting with John to discuss the details of the latest project"></textarea>
+      <textarea formControlName="description" matInput
+                placeholder="Ex. meeting with John to discuss the details of the latest project"></textarea>
     </mat-form-field>
   </div>
   <div class="event-form__field">
     <mat-icon>access_alarm</mat-icon>
     <mat-form-field>
-      <mat-label>Date & Time</mat-label>
-      <input matInput type="datetime-local">
+      <mat-label>Beginning</mat-label>
+      <input formControlName="startDateTime" matInput type="datetime-local">
+    </mat-form-field>
+  </div>
+  <div class="event-form__field">
+    <mat-icon>access_alarm</mat-icon>
+    <mat-form-field>
+      <mat-label>Ending</mat-label>
+      <input formControlName="endDateTime" matInput type="datetime-local">
     </mat-form-field>
   </div>
   <div class="event-form__field">
     <mat-icon>location_on</mat-icon>
     <mat-form-field>
       <mat-label>Location</mat-label>
-      <input matInput>
+      <input formControlName="location" matInput>
     </mat-form-field>
   </div>
   <div class="event-form__field">
