--- a/src/app/planner/components/calendar/event-dialog/event-dialog.component.html
+++ b/src/app/planner/components/calendar/event-dialog/event-dialog.component.html
@@ -1,8 +1,8 @@
 <h1 mat-dialog-title>Add Event</h1>
 <div class="event-dialog__form" mat-dialog-content>
-  <app-event-form />
+  <app-event-form #ref/>
 </div>
 <div mat-dialog-actions>
   <button mat-raised-button color="accent" (click)="cancel()">Cancel</button>
-  <button mat-raised-button color="primary">Save</button>
+  <button mat-raised-button color="primary" [disabled]="ref.form.invalid" (click)="submit(ref.form.value)">Save</button>
 </div>
