--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,1 +1,3 @@
-<app-menu-item *ngFor="let item of menuItems" [menuItem]="item" />
+@for (item of menuItems; track item) {
+<app-menu-item [menuItem]="item" />
+}
