Passing date from DayTile to EventForm for initialization of fields

--- a/src/app/planner/components/calendar/event-dialog/event-dialog.component.html
+++ b/src/app/planner/components/calendar/event-dialog/event-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Add Event</h1>
 <div class="event-dialog__form" mat-dialog-content>
-  <app-event-form #ref/>
+  <app-event-form [date]="data.date" #ref/>
 </div>
 <div mat-dialog-actions>
   <button mat-raised-button color="accent" (click)="cancel()">Cancel</button>
