Changing the structure of the repository

--- a/beautiful-mind-app/src/app/planner/components/calendar/calendar-toolbar/calendar-toolbar.component.html
+++ b/beautiful-mind-app/src/app/planner/components/calendar/calendar-toolbar/calendar-toolbar.component.html
@@ -19,10 +19,12 @@
           }
         </mat-select>
       </mat-form-field>
-      <button mat-mini-fab [disabled]="calendarService.isPrevButtonDisabled()"  (click)="calendarService.goToPreviousMonth()">
+      <button mat-mini-fab [disabled]="calendarService.isPrevButtonDisabled()"
+              (click)="calendarService.goToPreviousMonth()">
         <mat-icon>arrow_left</mat-icon>
       </button>
-      <button mat-mini-fab [disabled]="calendarService.isNextButtonDisabled()" (click)="calendarService.goToNextMonth()">
+      <button mat-mini-fab [disabled]="calendarService.isNextButtonDisabled()"
+              (click)="calendarService.goToNextMonth()">
         <mat-icon>arrow_right</mat-icon>
       </button>
     </div>
