Manual signup form created

--- a/beautiful-mind-app/src/app/auth/components/email-password-form/email-password-form.component.html
+++ b/beautiful-mind-app/src/app/auth/components/email-password-form/email-password-form.component.html
@@ -1,1 +1,13 @@
-<p>email-password-form works!</p>
+<form class="email-password-form" [formGroup]="form" (ngSubmit)="onSubmit()">
+  <mat-form-field>
+    <input formControlName="email" matInput placeholder="Email">
+  </mat-form-field>
+  <mat-form-field>
+    <input formControlName="password" matInput type="password" placeholder="Password">
+  </mat-form-field>
+  <span class="email-password-form__info">
+    {{ infoMessage() }}
+    <button mat-button color="accent" (click)="changeMode()">{{ toggleModeButtonLabel() }}</button>
+  </span>
+  <button mat-raised-button color="primary" type="submit">{{ submitButtonLabel() }}</button>
+</form>
