Minor bug fixing, setup for creating Events

--- a/beautiful-mind-app/src/app/auth/components/email-password-form/email-password-form.component.html
+++ b/beautiful-mind-app/src/app/auth/components/email-password-form/email-password-form.component.html
@@ -7,7 +7,7 @@
   </mat-form-field>
   <span class="email-password-form__info">
     {{ infoMessage() }}
-    <button mat-button color="accent" (click)="changeMode()">{{ toggleModeButtonLabel() }}</button>
+    <button mat-button color="accent" type="button" (click)="changeMode()">{{ toggleModeButtonLabel() }}</button>
   </span>
   <button mat-raised-button color="primary" type="submit">{{ submitButtonLabel() }}</button>
 </form>
