--- a/beautiful-mind-app/src/app/auth/components/email-password-form/email-password-form.component.html
+++ b/beautiful-mind-app/src/app/auth/components/email-password-form/email-password-form.component.html
@@ -5,9 +5,6 @@
   <mat-form-field>
     <input formControlName="password" matInput type="password" placeholder="Password">
   </mat-form-field>
-  <span class="email-password-form__info">
-    {{ infoMessage() }}
-    <button mat-button color="accent" type="button" (click)="changeMode()">{{ toggleModeButtonLabel() }}</button>
-  </span>
+  <ng-content></ng-content>
   <button mat-raised-button color="primary" type="submit">{{ submitButtonLabel() }}</button>
 </form>
